# buglens-

./: .env.example  .gitignore  README.md  UV.md  app.py  modal_app.py  pyproject.toml  requirements-modal.txt  requirements.txt
buglens/: __init__.py  backend.py  config.py  examples.py  prompts.py  render.py  schema.py  structure.py  vision.py
buglens-ui/: BugLens.html  buglens-app.jsx  buglens-cards.jsx  buglens-components.jsx  buglens-data.jsx  buglens-screens.jsx
docs/: CODEX_USAGE_LOG.md  CONTRIBUTION_STRATEGY.md  FIELD_NOTES.md
docs/plans/: 01_research_verified_stack.md  02_step_by_step_execution_plan.md  03_architecture_flows.md  04_prompt_schema_quality_plan.md  05_submission_readme_demo_social.md
tests/: test_app.py  test_backend.py  test_examples.py  test_render.py  test_schema.py  test_structure.py  test_vision.py
